--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap');
+@use "./components/SCSS/" as *;
 
 *,::before, ::after {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
+}
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: $poppins;
 }
