--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@
 
 ul {
     list-style-type: none;
+    font-family: $montserrat;
 }
 
 a {
@@ -17,4 +18,53 @@ a {
 
 body {
     font-family: $poppins;
+    font-size: 20px;
+    background-color: $primary;
 }
+
+.root {
+    overflow: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: $primary; 
+}
+
+::-webkit-scrollbar-thumb {
+    background: $secondary; 
+    border-radius: 1rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: $accent; 
+}
+
+// Phone size 375px
+.container {
+    width: min(100% - 0.5rem, 375px);
+    margin: 0 auto;
+    transition: 250ms ease-in-out;
+    overflow-x: hidden;
+}
+
+// Tablet size 768
+@media (min-width: 768px) {
+    .container {
+        width: min(100% - 0.5rem, 768px);
+        margin: 0 auto;
+        transition: 250ms ease-in-out;
+    }
+}
+// Desktop size 1440px
+@media (min-width: 1440px) {
+    .container {
+        width: min(100% - 0.5rem, 1080px);
+        margin: 0 auto;
+        transition: 250ms ease-in-out;
+    }
+}
+
