--- a/src/App.scss
+++ b/src/App.scss
@@ -18,12 +18,13 @@ a {
 
 body {
     font-family: $poppins;
-    font-size: 20px;
+    font-size: 18px;
     background-color: $primary;
+    color: $secondary;
 }
 
-.root {
-    overflow: hidden;
+.bubbles {
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -48,7 +49,6 @@ body {
     width: min(100% - 0.5rem, 375px);
     margin: 0 auto;
     transition: 250ms ease-in-out;
-    overflow-x: hidden;
 }
 
 // Tablet size 768
@@ -60,7 +60,7 @@ body {
     }
 }
 // Desktop size 1440px
-@media (min-width: 1440px) {
+@media (min-width: 1080px) {
     .container {
         width: min(100% - 0.5rem, 1080px);
         margin: 0 auto;
