--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -9,6 +9,8 @@ header {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     position: sticky;
     top: 0;
+    overflow-x: visible;
+    z-index: 9999;
 }
 
 .navbar {
@@ -35,10 +37,6 @@ header {
         margin-left: .5rem; 
     }
 
-    .open.activ {
-        visibility: hidden;
-    }
-
     .nav-container {
         text-align: center;
         position: absolute;
@@ -51,7 +49,6 @@ header {
         transition: transform 0.3s ease-in-out;
 
         .nav-list {
-            
             li {
                 padding: 2rem;
                 border-bottom: 1px solid $secondary;
@@ -80,8 +77,7 @@ header {
                     background-color: transparent;
 
                     a {
-                        color: $secondary;
-                        font-weight: 700;
+                        color: $accent;
                         transition: font-weight ease-in-out 300ms;
                     }
                 }
