added images and finished the skills section will further improve as i go

--- a/src/components/HeroSection/HeroSection.scss
+++ b/src/components/HeroSection/HeroSection.scss
@@ -15,7 +15,7 @@
     padding: .5rem 1rem;
     
     .header-title {
-        font-size: 32px;
+        font-size: 34px;
         margin: .5rem 0;
     }
 
@@ -36,7 +36,7 @@
         cursor: pointer;
         margin-top: 1rem;
         background-color: $accent;
-        color: $secondary;
+        color: #fff;
     }
 
     .btn-resume:hover,.btn-contact:hover {
