--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -19,7 +19,7 @@ header {
     justify-content: space-between;
 
     .nav-button {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         outline: none;
         border: none;
         background: none;
@@ -43,18 +43,19 @@ header {
         top: 0;
         right: 0;
         transform: translateX(100%);
-        background-color: $primary;
         height: 100vh;
         width: 100vw;
         transition: transform 0.3s ease-in-out;
 
         .nav-list {
+            
             li {
                 padding: 2rem;
                 border-bottom: 1px solid $secondary;
                 border-left: none;
                 border-right: none;
-                a {                    
+                a {      
+                    padding: 2rem; 
                     color: $secondary;
                 }
             }
@@ -144,6 +145,7 @@ header {
     }
     
     .social-icons {
+        font-size: 1.5rem;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -162,6 +164,6 @@ header {
 
 @media (min-width: 768px) {
    .nav-container {
-        position: static;
+        position: sticky;
    }
 }
