--- a/src/components/HeroSection/HeroSection.scss
+++ b/src/components/HeroSection/HeroSection.scss
@@ -1,120 +1,138 @@
 @use "../SCSS/" as *;
 
 .hero {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url(/src/assets/images/hero-background1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 0%;
 }
 
+
 .video {
-    width: 100%; 
+  width: 100%;
 }
 
 .content {
-    padding: .5rem 1rem;
-    
-    .header-title {
-        font-size: 34px;
-        margin: .5rem 0;
-    }
+  padding: 1rem 1rem;
+  background: rgba(33, 36, 40, 0.4);
+  border-radius: 1rem 1rem 0 0;
+  
+  .header-title {
+    font-size: 34px;
+    margin: 0.5rem 0;
+  }
 
-    .abouts {
-        text-align: justify;
+  @keyframes tracking-in-expand-fwd {
+    0% {
+      letter-spacing: -0.5em;
+      transform: translateZ(-700px);
+      opacity: 0;
     }
+    40% {
+      opacity: 0.6;
+    }
+    100% {
+      transform: translateZ(0);
+      opacity: 1;
+    }
+  }
+
+  .abouts {
+    text-align: justify;
+  }
 }
 
 .cta-btns {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+
+  .cta-btn {
+    padding: 0.7rem 1rem;
+    border-radius: 0.5rem;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    margin-top: 1rem;
+    background-color: $accent;
+    color: #fff;
+  }
+
+  .btn-resume:hover,
+  .btn-contact:hover {
+    transform: scale(110%);
+  }
+}
+
+@media (min-width: 768px) {
+  .cta-btns {
+    justify-content: start;
 
     .cta-btn {
-        padding: .7rem 1rem;
-        border-radius: .5rem;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        margin-top: 1rem;
-        background-color: $accent;
-        color: #fff;
+      background-color: $accent;
+      color: $secondary;
+      margin-right: 1rem;
     }
-
-    .btn-resume:hover,.btn-contact:hover {
-        transform: scale(110%);
-    }
+  }
 }
 
 @media (min-width: 768px) {
-    .cta-btns {
-        justify-content: start;
-        
-        .cta-btn {
-            background-color: $accent;
-            color: $secondary;
-            margin-right: 1rem;
+  .the-video {
+    position: relative;
+
+    .content {
+      border-radius: 1rem;
+      position: absolute;
+      bottom: 1rem;
+      left: 1rem;
+      max-width: 450px;
+      max-height: 420px;
+      background: rgba(33, 36, 40, 0.6);
+      padding: 2rem;
+      animation: fadeFromLeft 1s ease-in forwards;
+
+      @keyframes fadeFromLeft {
+        from {
+          opacity: 0;
+          transform: translateY(-100%);
         }
+        to {
+          opacity: 1;
+          transform: translateX(0);
+        }
+      }
+
+      h1 {
+        font-size: 32px;
+        margin-right: 5rem;
+      }
+
+      p {
+        text-align: justify;
+        margin-bottom: 1rem;
+      }
     }
-}
 
+    @media (min-width: 1080px) {
+      .content {
+        max-width: 547px;
+        max-height: 420px;
+        bottom: 3rem;
+        left: 3rem;
 
-
-@media (min-width: 768px) {
-    .the-video {
-        position: relative;
-        
-        .content {
-            border-radius: 1rem;
-            position: absolute;
-            bottom: 1rem;
-            left: 1rem;
-            max-width: 450px;
-            max-height: 420px;
-            background: rgba(33, 36, 40, .6);
-            padding: 2rem;
-            animation: fadeFromLeft 1s ease-in forwards;
-            
-            @keyframes fadeFromLeft {
-                from {
-                    opacity: 0;
-                    transform: translateY(-100%);
-                  }
-                  to {
-                    opacity: 1;
-                    transform: translateX(0);
-                  }
-            }
-            
-            h1 {
-                font-size: 32px;
-                margin-right: 5rem;
-            }
-
-            p {
-                text-align: justify;
-                margin-bottom: 1rem;
-            }
-        
+        h1 {
+          font-size: 3.2rem;
+          margin: auto;
+          margin-bottom: 1rem;
         }
-
-        @media (min-width: 1080px){
-            .content {
-                max-width: 547px;
-                max-height: 420px;
-                bottom: 3rem;
-                left: 3rem;
-                
-                h1 {
-                    font-size: 50px;
-                    margin: auto;
-                    margin-bottom: 1rem;
-                }
-            }
-
-        }
+      }
     }
+  }
 }
-
 
 .accentuate {
-    color: $accent;
+  color: $accent;
 }
