--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,10 +3,11 @@
 header {
   backdrop-filter: blur(10px);
   background: rgba(33, 36, 40, 0.4);
-  padding: 20px;
+  box-shadow: 10px 10px 15px -3px rgba(0, 0, 0, 0.2),
+    -10px -10px 15px -5px rgba(255, 255, 255, 0.1);
+  padding: 1.5rem;
   max-width: 100vw;
   width: 100%;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   position: sticky;
   top: 0;
   overflow-x: visible;
@@ -17,6 +18,28 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  .logo-container {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    
+    img {
+      margin-right: .5rem;
+      width: 35px;
+
+      @media (min-width:1080px) {
+        width: 50px;
+      }
+    }
+    .logo {
+      font-size: 1.5rem;
+      color: $secondary;
+      span {
+        color: $accent;
+      }
+    }
+}
 
   .nav-button {
     font-size: 1.5rem;
@@ -40,9 +63,9 @@ header {
   .logo-container {
     a {
       color: $secondary;
-     
     }
   }
+
   .nav-container {
     text-align: center;
     position: absolute;
@@ -81,15 +104,17 @@ header {
 
         li:hover {
           background-color: transparent;
-
           a {
+            border-radius: 1rem;
             color: $accent;
+            transform: translateY(-10%);
+            transition: translate 300ms ease-in;
           }
         }
       }
 
       .from-right.active {
-        animation: fadeInRight 1s ease-in forwards;
+        animation: fadeInRight 0.75s ease-in forwards;
       }
 
       @keyframes fadeInRight {
@@ -104,7 +129,7 @@ header {
       }
 
       .from-left.active {
-        animation: fadeInLeft 1s ease-in backwards;
+        animation: fadeInLeft 0.75s ease-in backwards;
       }
 
       @keyframes fadeInLeft {
@@ -155,6 +180,7 @@ header {
     a {
       color: $secondary;
       margin: 0rem 0.5rem;
+      border-radius: 1rem;
     }
 
     a:hover {
