--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,5 +1,8 @@
 @use "../SCSS/" as *;
 
+.projects {
+  margin-top: 10rem;
+}
 .project-wrapper.active {
   border: 1px solid green;
 }
@@ -20,11 +23,14 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 2rem;
     padding: 2rem;
+    border-radius: 1rem;
 
     @media (min-width: 1080px) {
       margin-top: 7rem;
       flex-direction: row;
+      padding: 2rem;
     }
 
     &:nth-child(n + 3):nth-child(-n + 5) {
@@ -42,20 +48,23 @@
       }
     }
 
-    img {
-      width: 100%;
-      @media (min-width: 768px) {
-        border-radius: 1rem;
-        width: 75%;
+
+      img {
+        border-radius: .5rem;
+        width: 100%;
+        @media (min-width: 768px) {
+          border-radius: 1rem;
+          width: 75%;
+        }
       }
-    }
+    
 
     .info {
       @media (min-width: 768px) {
         border-radius: 1rem;
         width: 75%;
       }
-      padding: 1rem;
+      padding: 1rem 2rem;
       .project-title {
         font-size: 2rem;
         text-align: center;
