--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -25,7 +25,8 @@
     padding: 1.5rem;
 
     @media (min-width: 1080px) {
-      width: 80%;
+      width: 65%;
+      height: 830px;
     }
 
     .contact-image {
@@ -40,6 +41,7 @@
     }
 
     h2 {
+      font-size: 2rem;
       padding: 2rem 0 0 0;
     }
 
@@ -48,11 +50,16 @@
     }
 
     p {
-      font-size: 1rem;
+      font-size: 1.5rem;
       margin: 0.5rem 0;
-      span {
+      
+      a {
         color: $secondary;
         font-weight: 700;
+      }
+
+      a:hover {
+        color: $accent;
       }
     }
 
@@ -132,12 +139,14 @@
       background-color: $primary;
       box-shadow: inset 10px 10px 15px -3px rgba(0, 0, 0, 0.1),
         inset -10px -10px 15px -5px rgba(255, 255, 255, 0.1);
-      position: relative;
+
+        &:focus {
+          outline: 1px solid $accent;
+          transition: outline .5s ease-in;
+        }
     }
 
-    input:focus {
-      outline: 1px solid $accent;
-    }
+    
 
     textarea {
       resize: none;
@@ -156,6 +165,7 @@
 
     textarea:focus {
       outline: 1px solid $accent;
+      transition: outline .5s ease-in;
     }
 
     button {
