--- a/src/components/HeroSection/HeroSection.scss
+++ b/src/components/HeroSection/HeroSection.scss
@@ -57,9 +57,8 @@
     cursor: pointer;
     margin-top: 1rem;
     background-color: $accent;
-    color: #FFF;
-    transform: scale(120%);
-    margin: 1rem 0rem 0rem 1rem;
+    color: $secondary;
+    transform: scale(110%);
   }
 
   .btn-resume:hover,
@@ -75,7 +74,7 @@
     .cta-btn {
       background-color: $accent;
       color: #FFF;
-      margin-right: 1rem;
+      margin-right: 2rem;
     }
   }
 }
