--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -23,8 +23,8 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(3, 1fr);
-      gap: 2rem;
-
+      gap: 1rem;
+      
       p {
         font-family: $poppins;
         font-size: 1.5rem;
@@ -48,9 +48,12 @@
     }
 
     .skill-item {
+      border-radius: 1rem;
       padding: 1rem;
       text-align: center;
       position: relative;
+      box-shadow: 10px 10px 15px -3px rgba(0, 0, 0, 0.2),
+    -10px -10px 15px -5px rgba(255, 255, 255, 0.1);
     }
 
     // .skill-item:hover {
