--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -23,7 +23,7 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(3, 1fr);
-      gap: 1rem;
+      gap: 1.5rem;
       
       p {
         font-family: $poppins;
@@ -42,6 +42,13 @@
       }
 
       .skills-set {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+      }
+    }
+
+    @media (min-width: 1080px) {
+      .skills-set {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(2, 1fr);
       }
@@ -54,6 +61,11 @@
       position: relative;
       box-shadow: 10px 10px 15px -3px rgba(0, 0, 0, 0.2),
     -10px -10px 15px -5px rgba(255, 255, 255, 0.1);
+    }
+
+    .skill-item:hover {
+      box-shadow: inset 10px 10px 15px -3px rgba(0, 0, 0, 0.2),
+    inset -10px -10px 15px -5px rgba(255, 255, 255, 0.1);
     }
 
     // .skill-item:hover {
