--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -52,7 +52,7 @@
     p {
       font-size: 1.5rem;
       margin: 0.5rem 0;
-      
+
       a {
         color: $secondary;
         font-weight: 700;
@@ -72,7 +72,15 @@
 
     .social-icons {
       padding-bottom: 2rem;
-      margin: 3rem 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 3rem 0 0 0;
+
+      @media (min-width: 768px) {
+        display: block;
+      }
+
       a {
         color: $secondary;
         font-size: 2rem;
@@ -140,13 +148,11 @@
       box-shadow: inset 10px 10px 15px -3px rgba(0, 0, 0, 0.1),
         inset -10px -10px 15px -5px rgba(255, 255, 255, 0.1);
 
-        &:focus {
-          outline: 1px solid $accent;
-          transition: outline .5s ease-in;
-        }
+      &:focus {
+        outline: 1px solid $accent;
+        transition: outline 0.5s ease-in;
+      }
     }
-
-    
 
     textarea {
       resize: none;
@@ -165,7 +171,7 @@
 
     textarea:focus {
       outline: 1px solid $accent;
-      transition: outline .5s ease-in;
+      transition: outline 0.5s ease-in;
     }
 
     button {
