--- a/src/components/HeroSection/HeroSection.scss
+++ b/src/components/HeroSection/HeroSection.scss
@@ -73,7 +73,7 @@
 
     .cta-btn {
       background-color: $accent;
-      color: #FFF;
+      color: $secondary;
       margin-right: 2rem;
     }
   }
