--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -96,8 +96,12 @@ label {
 
       a:hover {
         color: $accent;
-        box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.2),
-          inset -5px -5px 15px -5px rgba(255, 255, 255, 0.1);
+        background-image: linear-gradient(
+          315deg,
+          hsl(225deg 100% 9%) 60%,
+          hsl(224deg 66% 17%) 96%,
+          hsl(224deg 32% 25%) 100%
+        );
       }
 
       .github {
@@ -141,20 +145,30 @@ label {
 
     input {
       border-radius: 0.5rem;
-      border: none;
+      border: 1px solid;
+      border-image: linear-gradient(
+        315deg,
+        hsl(225deg 100% 9%) 60%,
+        hsl(224deg 66% 17%) 96%,
+        hsl(224deg 32% 25%) 100%
+      );
+      border-image-slice: 1;
       font-family: $poppins;
       color: $secondary;
       padding: 1rem;
-      width: 100%;
+      min-width: 100%;
       margin: 1rem 0;
-      outline: none;
       background-color: $primary;
-      box-shadow: inset 10px 10px 15px -3px rgba(0, 0, 0, 0.1),
-        inset -10px -10px 15px -5px rgba(255, 255, 255, 0.1);
+      background-image: linear-gradient(
+        153deg,
+        hsl(225deg 100% 9%) 1%,
+        hsl(224deg 66% 17%) 96%,
+        hsl(224deg 32% 25%) 100%
+      );
 
       &:focus {
         outline: 1px solid $accent;
-        transition: outline 0.5s ease-in;
+        transition: outline 0.2s ease-in;
       }
     }
 
@@ -166,11 +180,21 @@ label {
       background-color: $primary;
       width: 100%;
       color: $secondary;
-      border: none;
-      outline: none;
       border-radius: 0.5rem;
-      box-shadow: inset 10px 10px 15px -3px rgba(0, 0, 0, 0.1),
-        inset -10px -10px 15px -5px rgba(255, 255, 255, 0.1);
+      border: 1px solid;
+      border-image: linear-gradient(
+        315deg,
+        hsl(225deg 100% 9%) 60%,
+        hsl(224deg 66% 17%) 96%,
+        hsl(224deg 32% 25%) 100%
+      );
+      border-image-slice: 1;
+      background-image: linear-gradient(
+        153deg,
+        hsl(225deg 100% 9%) 1%,
+        hsl(224deg 66% 17%) 96%,
+        hsl(224deg 32% 25%) 100%
+      );
     }
 
     textarea:focus {
@@ -186,7 +210,7 @@ label {
       background: $primary;
       box-shadow: 10px 10px 15px -3px rgba(0, 0, 0, 0.2),
         -10px -10px 15px -5px rgba(255, 255, 255, 0.1);
-      color: $accent;
+      color: $secondary;
       border-radius: 0.5rem;
       margin-top: 3rem;
       cursor: pointer;
