--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -24,7 +24,7 @@
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(3, 1fr);
       gap: 1.5rem;
-      
+
       p {
         font-family: $poppins;
         font-size: 1.5rem;
@@ -59,13 +59,21 @@
       padding: 1rem;
       text-align: center;
       position: relative;
-      box-shadow: 10px 10px 15px -3px rgba(0, 0, 0, 0.2),
-    -10px -10px 15px -5px rgba(255, 255, 255, 0.1);
+
+      box-shadow: 15px 15px 25px -5px rgba(0, 0, 0, 0.3),
+        -5px -5px 20px -5px rgba(196, 207, 222, 0.3);
     }
 
     .skill-item:hover {
-      box-shadow: inset 10px 10px 15px -3px rgba(0, 0, 0, 0.2),
-    inset -10px -10px 15px -5px rgba(255, 255, 255, 0.1);
+      // box-shadow: inset 10px 10px 15px -3px rgba(0, 0, 0, 0.2),
+      //   inset -10px -10px 15px -5px rgba(255, 255, 255, 0.1);
+      color: white;
+      background-image: linear-gradient(
+        315deg,
+        hsl(225deg 100% 9%) 60%,
+        hsl(224deg 66% 17%) 96%,
+        hsl(224deg 32% 25%) 100%
+      );
     }
 
     // .skill-item:hover {
